Fixing white space on card

--- a/Selu383.SP24.Web/src/routes/layout.css
+++ b/Selu383.SP24.Web/src/routes/layout.css
@@ -17,10 +17,9 @@
 .hotel-card {
   cursor: pointer;
   width: 100vw;
-  height: 40vh;
   margin-bottom: 20px;
-
-  min-height: auto;
+  min-height: 0;
+  flex-grow: 1;
 }
 
 .card-image {
